--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -1,7 +1,7 @@
 <header class="app-header navbar">
   <button class="navbar-toggler mobile-sidebar-toggler hidden-lg-up" type="button">&#9776;</button>
   <a class="navbar-brand" href="#"></a>
-  
+
   <ul class="nav navbar-nav hidden-md-down">
     <li class="nav-item">
       <a class="nav-link navbar-toggler sidebar-toggler" href="#">&#9776;</a>
@@ -27,7 +27,8 @@
       <a class="nav-link" href="#"><i class="icon-location-pin"></i></a>
     </li>
     <li class="nav-item dropdown" dropdown (onToggle)="toggled($event)">
-      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle>
+      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"
+        dropdownToggle>
         <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
         <span class="hidden-md-down">admin</span>
       </a>
@@ -55,7 +56,7 @@
       <a class="nav-link navbar-toggler aside-menu-toggler" href="#">&#9776;</a>
     </li>
   </ul>
-  
+
 </header>
 
 <div class="app-body">
@@ -65,7 +66,7 @@
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/dashboard']"><i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span></a>
         </li>
-        
+
         <li class="divider"></li>
         <li class="nav-title">
           UI Elements
@@ -137,7 +138,10 @@
             </li>
           </ul>
         </li>
-        
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/events']"><i class="icon-pie-chart"></i> Events</a>
+        </li>
+
       </ul>
     </nav>
   </div>
@@ -148,7 +152,7 @@
     <!-- Breadcrumb -->
     <ol class="breadcrumb">
       <breadcrumbs></breadcrumbs>
-      
+
       <!-- Breadcrumb Menu-->
       <li class="breadcrumb-menu hidden-md-down">
         <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
@@ -157,12 +161,13 @@
           <a class="btn btn-secondary" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>
         </div>
       </li>
-      
+
     </ol>
 
     <div class="container-fluid">
       <router-outlet></router-outlet>
-    </div><!-- /.conainer-fluid -->
+    </div>
+    <!-- /.conainer-fluid -->
   </main>
 
   <aside class="aside-menu">
