Added more pictures and some other things to the event cards.

--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -6,25 +6,38 @@
 
 	<!--Eventos Proximos-->
 	<div class="row">
-		<!--/.col-->
-		<div class="col-sm-6 col-md-3">
-			<div class="card">
-				<img class="card-img-top" src="assets/img/event.jpg" alt="Card image cap">
-				<div class="card-block">
-					<h4 class="card-title">Nombre del evento</h4>
-					<p>Lorem ipsum dolor sit amet.</p>
-					<a href="#" class="btn btn-primary">Ver detalles</a>
-				</div>
-			</div>
-		</div>
-		<!--/.col-->
 		<div class="col-sm-6 col-md-3">
 			<div class="card">
 				<img class="card-img-top" src="assets/img/event2.jpg" alt="Card image cap">
 				<div class="card-block">
 					<h4 class="card-title">Nombre del evento</h4>
-					<p>Lorem ipsum dolor sit amet.</p>
+					<p class="card-text">Lorem ipsum dolor sit amet.</p>
 					<a href="#" class="btn btn-primary">Ver detalles</a>
+					<p class="pull-right text-muted">09/05/2017</p>					
+				</div>
+			</div>
+		</div>
+		<!--/.col-->
+		<div class="col-sm-6 col-md-3">
+			<div class="card">
+				<img class="card-img-top" src="assets/img/event3.jpg" alt="Card image cap">
+				<div class="card-block">
+					<h4 class="card-title">Nombre del evento</h4>
+					<p class="card-text">Lorem ipsum dolor sit amet.</p>
+					<a href="#" class="btn btn-primary">Ver detalles</a>
+					<p class="pull-right text-muted">09/05/2017</p>					
+				</div>
+			</div>
+		</div>
+		<!--/.col-->
+		<div class="col-sm-6 col-md-3">
+			<div class="card">
+				<img class="card-img-top" src="assets/img/event4.jpg" alt="Card image cap">
+				<div class="card-block">
+					<h4 class="card-title">Nombre del evento</h4>
+					<p class="card-text">Lorem ipsum dolor sit amet.</p>
+					<a href="#" class="btn btn-primary">Ver detalles</a>
+					<p class="pull-right text-muted">09/05/2017</p>
 				</div>
 			</div>
 		</div>
@@ -34,21 +47,12 @@
 				<img class="card-img-top" src="assets/img/event.jpg" alt="Card image cap">
 				<div class="card-block">
 					<h4 class="card-title">Nombre del evento</h4>
-					<p>Lorem ipsum dolor sit amet.</p>
+					<p class="card-text">Lorem ipsum dolor sit amet.</p>
 					<a href="#" class="btn btn-primary">Ver detalles</a>
+					<p class="pull-right text-muted">09/05/2017</p>					
 				</div>
 			</div>
 		</div>
 		<!--/.col-->
-		<div class="col-sm-6 col-md-3">
-			<div class="card">
-				<img class="card-img-top" src="assets/img/event.jpg" alt="Card image cap">
-				<div class="card-block">
-					<h4 class="card-title">Nombre del evento</h4>
-					<p>Lorem ipsum dolor sit amet.</p>
-					<a href="#" class="btn btn-primary">Ver detalles</a>
-				</div>
-			</div>
-		</div>
 	</div>
 </div>
