Added appointments view and a fullcalendar wrapper i found.

--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -139,7 +139,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/events']"><i class="icon-pie-chart"></i> Events</a>
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/events']"><i class="icon-pie-chart"></i> Eventos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/appointments']"><i class="icon-pie-chart"></i> Citas</a>
         </li>
 
       </ul>
